--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -21,9 +21,9 @@
     <div class="wrap">
         <header class="header">
             <div class="container flex" style="justify-content: space-between; align-items: center;">
-                <a href="../index.html">
+                <a href="../pages/infopage.html">
                     <div class="logo">
-                        <img src="../img/лого.png" alt="">
+                        <img src="../img/220px-P_dove_peace.png" alt="">
                     </div>
                 </a>
 
