--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                 <div class="card-hiro row row-medium">
                     <div class="column width-1-1-sm width-1-3-md width-1-4-lg">
-                        <div class="margin-media" style="position: relative; background-image: url(img/pablo-picasso-gty-jef-180219_8x11_992.jpg); background-size: cover; height: 484.4px;">
+                        <div class="margin-media" style="border: 3px solid #3b4b60; position: relative; background-image: url(img/pablo-picasso-gty-jef-180219_8x11_992.jpg); background-size: cover; height: 484.4px;">
                             <p style="position: absolute; bottom: 30px; width: 100%; " class="button-first"><a href="#">читать больше</a></p>
                         </div>
                     </div>
@@ -326,12 +326,12 @@
                     <div class="column width-1-1-sm width-1-3-md width-1-3-lg">
                         <div class="flex row row-medium">
                             <div class="column width-1-1-sm width-1-1-md width-1-1-lg">
-                                <div style="margin: 35px 0; position: relative; background-image: url(img/pablo-pikasso.jpg); background-size: cover; height: 484.4px;">
+                                <div style="border: 3px solid #3b4b60; margin: 35px 0; position: relative; background-image: url(img/pablo-pikasso.jpg); background-size: cover; height: 484.4px;">
                                     <p style="position: absolute; bottom: 30px; width: 100%;" class="button-first"><a href="pages/memory.html">Память</a></p>
                                 </div>
                             </div>
                             <div class="column width-1-1-sm width-1-1-md width-1-1-lg">
-                                <div style="margin: 35px 0; position: relative; background-image: url(img/624945b8e5d25aaf8740b7d79680dbec_L.jpg); background-size: cover; height: 484.4px;">
+                                <div style="border: 3px solid #3b4b60; margin: 35px 0; position: relative; background-image: url(img/624945b8e5d25aaf8740b7d79680dbec_L.jpg); background-size: cover; height: 484.4px;">
                                     <p style="position: absolute; bottom: 30px; width: 100%;" class="button-first"><a href="pages/gallery.html">Смотреть все картины</a></p>
                                 </div>
                             </div>
